--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-"name": "mein-mcp-server",
-"version": "1.0.0",
-"type": "module",
-"scripts": {
-"start": "node server.js"
-},
-"dependencies": {
-"express": "^4.18.2",
-"@modelcontextprotocol/sdk": "^1.0.0"
-}
+  "name": "mein-mcp-server",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
